[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://sprites/UI/DashIndicatorEmpty.png" type="Texture2D" id=2]
[ext_resource path="res://sprites/UI/HealthTickEmpty.png" type="Texture2D" id=3]
[ext_resource path="res://sprites/UI/DashIndicator.png" type="Texture2D" id=4]
[ext_resource path="res://sprites/UI/HealthTick.png" type="Texture2D" id=5]
[ext_resource path="res://fonts/Octobre.ttf" type="FontFile" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "full",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "cooldown",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
} ]

[sub_resource type="FontFile" id=3]
size = 28
font_data = ExtResource( 6 )

[sub_resource type="FontFile" id=4]
size = 28
font_data = ExtResource( 6 )

[node name="HUD" type="Node2D"]
position = Vector2( 4, 0 )
scale = Vector2( 0.5, 0.5 )
z_index = 18
z_as_relative = false
script = ExtResource( 1 )

[node name="health0" type="AnimatedSprite2D" parent="."]
position = Vector2( 40, 40 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "full"

[node name="health1" type="AnimatedSprite2D" parent="."]
position = Vector2( 95, 40 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "full"

[node name="health2" type="AnimatedSprite2D" parent="."]
position = Vector2( 150, 40 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "full"

[node name="dodgeInd" type="AnimatedSprite2D" parent="."]
position = Vector2( 45, 550 )
scale = Vector2( 5, 5 )
frames = SubResource( 2 )
animation = "ready"

[node name="dollarstolevel" type="Label" parent="."]
offset_left = 430.0
offset_top = 532.0
offset_right = 593.0
offset_bottom = 563.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "$$$ to lvl - 2"

[node name="timer" type="Label" parent="."]
offset_left = 912.0
offset_top = 18.0
offset_right = 968.0
offset_bottom = 49.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0000"
